<resources>
    <string name="app_name">Eventando</string>
    <string name="descricao">Descrição</string>
    <string name="local_do_evento">Local do evento</string>
    <string name="estado">Estado</string>
    <string name="CEP">CEP</string>
    <string name="complemento">Complemento (Opcional)</string>
    <string name="visualizar_complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua/Avenida</string>
    <string name="nome_do_evento">Nome do evento</string>
    <string name="cidade">Cidade</string>
    <string name="data">Data</string>
    <string name="title_activity_mapa">Map</string>
    <string name="descConfirmar">Confirmar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="selecionar_interesses">Selecionar Interesses</string>
    <string name="data_de_nasicmento">Data de nasicmento</string>
    <string name="cpf">CPF</string>
    <string name="tipo">TIPO</string>
    <string name="criar">CRIAR</string>
    <string name="title_activity_maps">Map</string>
    <string name="categoria">Categoria</string>
    <string name="horarioInicio">Horário de início: </string>
    <string name="horarioTermino">Horário de término: </string>
    <string name="dataInicio">Data de início: </string>
    <string name="dataTermino">Data de término: </string>
</resources>
