<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".evento.CriarEventoFragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
        >

            <TextView
                    android:id="@+id/txtLogin"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="44dp"
                    android:gravity="center_horizontal"
                    android:text="Evento encontrado"
                    style="@style/TitleStyle"
            />

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_title"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/marginSize"
            >

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                >

                    <TextView
                            android:id="@+id/txHintNome"
                            android:singleLine="true"
                            android:layout_marginTop="16dp"
                            android:hint="@string/nome_do_evento"
                            android:inputType="textPersonName"
                            style="@style/ParagraphStyle"
                    />

                    <TextView
                            android:id="@+id/txtNome"
                            android:singleLine="true"
                            android:layout_marginTop="16dp"
                            android:hint=""
                            android:inputType="textPersonName"
                            style="@style/ParagraphStyle"
                            android:textSize="@dimen/subTitleTextSize"
                            android:layout_marginLeft="@dimen/marginSize"
                    />

                    <TextView
                            android:id="@+id/txtHintCep"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:hint="@string/CEP"
                            android:inputType="numberDecimal"
                            style="@style/ParagraphStyle"
                    />

                    <TextView
                            android:id="@+id/txtCep"
                            android:singleLine="true"
                            android:layout_marginTop="16dp"
                            android:hint=""
                            android:inputType="numberDecimal"
                            style="@style/ParagraphStyle"
                            android:textSize="@dimen/subTitleTextSize"
                            android:layout_marginLeft="@dimen/marginSize"
                    />

                    <TextView
                            android:id="@+id/txtHintEstado"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:hint="@string/estado"
                            android:inputType="textAutoComplete"
                            style="@style/ParagraphStyle"
                    />

                    <TextView
                            android:id="@+id/txtEstado"
                            android:singleLine="true"
                            android:layout_marginTop="16dp"
                            android:hint=""
                            android:inputType="textAutoComplete"
                            style="@style/ParagraphStyle"
                            android:textSize="@dimen/subTitleTextSize"
                            android:layout_marginLeft="@dimen/marginSize"
                    />

                    <TextView
                            android:id="@+id/txtHintCidade"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:hint="@string/cidade"
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                    />

                    <TextView
                            android:id="@+id/txtCidade"
                            android:singleLine="true"
                            android:layout_marginTop="16dp"
                            android:hint=""
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                            android:textSize="@dimen/subTitleTextSize"
                            android:layout_marginLeft="@dimen/marginSize"
                    />

                    <TextView
                            android:id="@+id/txtHintBairro"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:hint="@string/bairro"
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                    />

                    <TextView
                            android:id="@+id/txtBairro"
                            android:singleLine="true"
                            android:layout_marginTop="16dp"
                            android:hint=""
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                            android:textSize="@dimen/subTitleTextSize"
                            android:layout_marginLeft="@dimen/marginSize"
                    />

                    <TextView
                            android:id="@+id/txtHintRua"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:hint="@string/rua"
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                    />

                    <TextView
                            android:id="@+id/txtRua"
                            android:singleLine="true"
                            android:layout_marginTop="16dp"
                            android:hint=""
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                            android:textSize="@dimen/subTitleTextSize"
                            android:layout_marginLeft="@dimen/marginSize"
                    />

                    <TextView
                            android:id="@+id/txtHintComplemento"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:hint="@string/visualizar_complemento"
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                    />

                    <TextView
                            android:id="@+id/txtComplemento"
                            android:singleLine="true"
                            android:layout_marginTop="16dp"
                            android:hint=""
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                            android:textSize="@dimen/subTitleTextSize"
                            android:layout_marginLeft="@dimen/marginSize"
                    />

                    <TextView
                            android:id="@+id/txtHintDescricao"
                            android:layout_marginTop="16dp"
                            android:hint="@string/descricao"
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                    />

                    <TextView
                            android:id="@+id/txtDescricao"
                            android:layout_marginTop="16dp"
                            android:hint=""
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                            android:textSize="@dimen/subTitleTextSize"
                            android:layout_marginLeft="@dimen/marginSize"
                    />

                    <TextView
                            android:id="@+id/txtHintCategoria"
                            android:layout_marginTop="16dp"
                            android:hint="@string/categoria"
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                    />

                    <TextView
                            android:id="@+id/txtCategoria"
                            android:hint=""
                            android:inputType="text|textMultiLine"
                            style="@style/ParagraphStyle"
                            android:textSize="@dimen/subTitleTextSize"
                            android:layout_marginLeft="@dimen/marginSize"
                            android:layout_marginBottom="@dimen/marginSize"
                    />

                    <!--<TextView
                            android:text="Data"
                            android:layout_width="match_parent"
                            android:layout_height="37dp" android:id="@+id/txtData" android:textSize="18sp"
                            android:paddingTop="10dp"/>-->

                    <!--<CalendarView
                            android:layout_width="match_parent"
                            android:layoutMode="clipBounds"
                            android:layout_height="wrap_content"
                            android:id="@+id/calendario"/>-->

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>