<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5fb0c9"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".evento.CriarEventoFragment">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="44dp"
                    android:gravity="center_horizontal"
                    android:text="Crie seu evento"
                    android:textColor="#fff"
                    android:textSize="26sp"
                    android:textStyle="bold"/>

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_title"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:background="#fff"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="30dp">

                    <EditText
                            android:id="@+id/txtNome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTint="#FF4081"
                            android:singleLine="true"
                            android:hint="@string/nome_do_evento"
                            android:inputType="textPersonName"/>

                    <EditText
                            android:id="@+id/txtLocal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:drawableTint="#FF4081"
                            android:hint="@string/local_do_evento"
                            android:inputType="textEmailAddress"/>

                    <Button
                            android:text="Adicionar Local"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/btnLocal"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    <EditText
                            android:id="@+id/txtDescricao"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawableTint="#FF4081"
                            android:hint="@string/descricao"
                            android:inputType="text|textMultiLine"
                            android:textSize="18sp"/>

                    <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/spnCategoria"
                            android:autofillHints="teste"/>
                    <TextView
                            android:text="Data"
                            android:layout_width="match_parent"
                            android:layout_height="37dp" android:id="@+id/txtData" android:textSize="18sp"

                            android:paddingTop="10dp"/>
                    <CalendarView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/calendario"/>
                    <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:orientation="horizontal"
                            android:paddingTop="10px"
                            android:paddingBottom="10px">

                        <RadioButton
                                android:text="Publico"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/radioPublico"
                                android:layout_weight="1"/>

                        <RadioButton
                                android:text="Privado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/radioPrivado"
                                android:layout_weight="1"/>
                    </RadioGroup>

                    <Button
                            android:id="@+id/btnCadastrar"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="22dp"
                            android:background="#d67601"
                            android:text="Criar"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="18sp"/>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>